--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,9 +3,7 @@ name: Deploy to EC2 ASG
 on:
   push:
     branches:
-      - main  # Change this to your branch name
-    paths:
-      - 'index.html'  # Only trigger when index.html changes
+      - main
 
 jobs:
   deploy:
@@ -25,7 +23,6 @@ jobs:
       - name: Get ASG instances
         id: get-instances
         run: |
-          # Get instance IDs from the Auto Scaling Group
           INSTANCE_IDS=$(aws autoscaling describe-auto-scaling-groups \
             --auto-scaling-group-names proj-11-asg \
             --query 'AutoScalingGroups[0].Instances[?HealthStatus==`Healthy`].InstanceId' \
@@ -63,18 +60,15 @@ jobs:
           for ip in $PUBLIC_IPS; do
             echo "Deploying to instance: $ip"
             
-            # Copy the template HTML file to the instance
             scp -i private_key.pem \
               -o StrictHostKeyChecking=no \
               -o UserKnownHostsFile=/dev/null \
               index.html ubuntu@$ip:/tmp/index.template.html
             
-            # Generate the final HTML with instance metadata and deploy
             ssh -i private_key.pem \
               -o StrictHostKeyChecking=no \
               -o UserKnownHostsFile=/dev/null \
-              ubuntu@$ip << 'EOF'
-              # Get instance metadata
+              ubuntu@$ip << 'ENDSSH'
               TOKEN=$(curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")
               INSTANCE_ID=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/instance-id)
               INSTANCE_TYPE=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/instance-type)
@@ -82,7 +76,6 @@ jobs:
               LOCAL_IPV4=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4)
               PUBLIC_IPV4=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/public-ipv4)
               
-              # Replace placeholders in the template
               sed -e "s/{{INSTANCE_ID}}/$INSTANCE_ID/g" \
                   -e "s/{{INSTANCE_TYPE}}/$INSTANCE_TYPE/g" \
                   -e "s/{{AVAILABILITY_ZONE}}/$AVAILABILITY_ZONE/g" \
@@ -93,7 +86,7 @@ jobs:
               sudo chown www-data:www-data /var/www/html/index.html
               sudo systemctl restart nginx
               echo "Deployment completed on $(hostname)"
-EOF
+          ENDSSH
             
             echo "✅ Deployment to $ip completed"
           done
